[gd_scene load_steps=2 format=3 uid="uid://bxfs17unc3gf"]

[ext_resource type="Script" uid="uid://bl26m0rqayemm" path="res://scenes/colony/colony_main.gd" id="1_6idtu"]

[node name="ColonyMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6idtu")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "colonony.....game....."

[node name="Play" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Man" type="Node2D" parent="."]

[node name="LoggerScroll" type="ScrollContainer" parent="Man"]
custom_minimum_size = Vector2(155, 219)
anchors_preset = -1
anchor_left = 0.78875
anchor_top = 0.62
anchor_right = 0.78875
anchor_bottom = 0.62
offset_left = 631.0
offset_top = 372.0
offset_right = 786.0
offset_bottom = 591.0
metadata/_edit_use_anchors_ = true

[node name="LogLabel" type="RichTextLabel" parent="Man/LoggerScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/Play" to="." method="_play_pressed"]
